feat(): 升级依赖至3.3.4